--- a/foundry.toml
+++ b/foundry.toml
@@ -2,6 +2,8 @@
 src = 'src'
 out = 'out'
 libs = ['lib']
+optimizer = true
+optimizer-runs = 200
 
 
 # See more config options https://github.com/foundry-rs/foundry/tree/master/config
